Fix content overflow

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p {
 body {
     justify-content: center;
     align-items: center;
-    block-size: 100vh;
+    min-block-size: 100vh;
     background-color: var(--blue-950);
     font-family: "Outfit", sans-serif;
     font-weight: 300;
